Java 11 build successfully completed